# RTS-Scheduling

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  tarefas.json
lib/json-c/include/json-c/: arraylist.h  debug.h  json.h  json_c_version.h  json_object.h  json_patch.h  json_tokener.h  json_types.h  linkhash.h  printbuf.h
lib/json-c/lib/cmake/json-c/: json-c-config.cmake  json-c-targets-debug.cmake  json-c-targets.cmake
lib/json-c/lib/pkgconfig/: json-c.pc
lib/logger/include/: logger.c  logger.h
lib/logger/lib/: readme.md
